# minisftp

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md
crates/minisftp-cli/: Cargo.toml
crates/minisftp-cli/src/: commands.rs  handler.rs  main.rs
crates/minisftp-core/: Cargo.toml
crates/minisftp-core/src/: config.rs  error.rs  lib.rs  session.rs  sftp.rs  state.rs  utils.rs
