[workspace]
members = [
    "crates/minisftp-core",
    "crates/minisftp-cli",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["kodeholic9"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/kodeholic9/minisftp"
homepage    = "https://github.com/kodeholic9/minisftp"
readme      = "README.md"

[workspace.dependencies]
tokio      = { version = "1",    features = ["full"] }
russh      = "0.45.0"
russh-sftp = "2.0"
chrono     = { version = "0.4",  features = ["std"] }
